Fixing header spacing

--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -18,6 +18,7 @@ nav {
 nav li {
 	text-align: center;
 	color:#fff;
+	margin: 0 0 1.5rem;
 }
 
 nav a, 
